--- a/dataprep.ipynb
+++ b/dataprep.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "43ceef42",
    "metadata": {},
    "outputs": [
@@ -105,7 +105,7 @@
        "4                              Nc1ccn(n1)c1ccccc1.Cl  2860831"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,6 +134,29 @@
     "        img = from_pil(Draw.MolToImage(mol))\n",
     "        imgs.append(img)\n",
     "    return imgs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "e2a51f8d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['pubchem_df.pkl']"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from joblib import dump\n",
+    "\n",
+    "dump(df, \"pubchem_df.pkl\")"
    ]
   }
  ],
